# agentic-ai-engineering

./: pyproject.toml  requirements.txt
edd/: lab_1.ipynb
mcp/: lab_1.ipynb
openai/: lab_1.ipynb  lab_2.ipynb
