[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "openai>=1.93.2",
    "openai-agents>=0.1.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
]
